<resources>
<string name="about">About</string>
<string name="preferences_title">Settings</string>
<string name="sk2_main_results_activity_title">App Name</string>
<string name="socialmedia_footer_short">" with @SamKnows http://bit.ly/Oaz6mR"</string>
<string name="socialmedia_footer_long">" with SamKnows."</string>
<string name="socialmedia_header_short_carrier">Testing broadband speed on @</string>
<string name="socialmedia_header_short_nocarrier">Testing broadband speed</string>
<string name="socialmedia_header_long_carrier">Now testing my actual broadband speed on @</string>
<string name="socialmedia_header_long_nocarrier">Now testing my actual broadband speed</string>
<string name="socialmedia_header_short_carrier_average">Testing average broadband speed on @</string>
<string name="socialmedia_header_short_nocarrier_average">Testing average broadband speed</string>
<string name="socialmedia_header_long_carrier_average">Now testing my average broadband speed on @</string>
<string name="socialmedia_header_long_nocarrier_average">Now testing my average broadband speed</string>
<string name="SocialMedia_TwitterIfUsingImage_ChangeFromThis1">Testing average</string>
<string name="SocialMedia_TwitterIfUsingImage_ChangeToThis1">Testing</string>
<string name="SocialMedia_TwitterIfUsingImage_ChangeFromThis2">Testing actual</string>
<string name="SocialMedia_TwitterIfUsingImage_ChangeToThis2">Testing</string>
<string name="SocialMedia_TwitterIfUsingImage_ChangeRegex4From">", Up:.* with"</string>
<string name="SocialMedia_TwitterIfUsingImage_ChangeRegex4To">" with"</string>
<string name="socialmedia_upload">" Up: "</string>
<string name="socialmedia_download">" Down: "</string>
<string name="socialmedia_post_to_twitter_title">Post to Twitter</string>
<string name="socialmedia_twitter_authorization_error">Twitter authorization error, please try again later</string>
<string name="socialmedia_twitter_tweet_successful">Tweet Successful!</string>
<string name="socialmedia_twitter_tweet_duplicate_detected">Twitter won\'t let you post duplicate messages!</string>
<string name="socialmedia_twitter_tweet_error">Tweet error, please try again later</string>
<string name="socialmedia_twitter_login_error">Twitter Login error, please try again later</string>
<string name="socialmedia_facebook_posting">Posting to Facebook&#8230;</string>
<string name="socialmedia_facebook_posted">Posted to Facebook</string>
<string name="socialmedia_facebook_connection_failed">Facebook connection failed</string>
<string name="social_media_screenshot_title">Include screenshot?</string>
<string name="social_media_screenshot_message">Would you like to include a screenshot with your social media post?</string>
<string name="social_media_Title_ShareUsingSocialMediaMobile">Share using Social Media</string>
<string name="social_media_Message_ShareUsingSocialMediaMobile">Only Mobile test results can be shared using Social Media.</string>
<string name="about_browsing">Visiting a web page is one of the most common tasks people perform on the Internet. This test emulates that process and shows the average time in seconds of how long a selection of popular web sites took to load. Note that results may vary according to changes in the websites being visited. Times are recorded in seconds (lower is better).</string>
<string name="about_download">This should be indicative of the maximum speed your broadband connection will be able to download data from the Internet.  Results are recorded in Mbps (higher is better).</string>
<string name="about_jitter">This test measures the variation in the time it takes one packet to be sent to one of our test servers and then returned back to you. In other words, jitter represents the variation of latency. Jitter is usually an indication of network congestion and high levels of jitter would impact the performance of time sensitive applications such as VoIP, online gaming and video streaming. Jitter is recorded in milliseconds (lower is better).</string>
<string name="about_latency">This test measures how long it takes one packet to be sent to one of our test servers, and then returned back to you.  Latency can be thought of as the responsiveness of the connection from your device and our servers on the Internet. Times are recorded here in milliseconds (lower is better).</string>
<string name="about_packet_loss">Packet loss occurs when the information sent by your device fails to reach its destination. When packet loss is high, you may find that time sensitive applications such as Voice over IP (VoIP) and online gaming will suffer. Packet loss is recorded here as a percentage (lower is better).</string>
<string name="about_text">This app runs in the background, measuring your mobile provider\'s network performance whilst you are not using your device. You can view results by pressing the Test Results button.  Measurement results are transmitted back to Samknows for use in their projects with telecoms regulators worldwide.\n\nThe application has been optimised for efficient network usage, however it might be still too high for your data plan. If that\'s the case you may configure a monthly data cap in settings menu accessible via the Menu key.\n\nFor support or queries please contact us at community@samknows.com </string>
<string name="about_upload">This should be indicative of the maximum speed your broadband connection will be able to transmit data to the Internet.  Results are recorded in Mbps (higher is better).</string>
<string name="accept_terms">Please tick checkbox to confirm Terms and Conditions</string>
<string name="activated">Activated</string>
<string name="activating">Activating</string>
<string name="activating_complete">Activating complete</string>
<string name="activation">Refresh config</string>
<string name="activation_menu_string">Activation</string>
<string name="activation_needed">The application needs to be activated</string>
<string name="active_connection">Active Connection: </string>
<string name="active_metrics">Active Metrics</string>
<string name="server">Server</string>
<string name="result">Result</string>
<string name="active_metrics_mobile">Active Metrics (Mobile)</string>
<string name="active_metrics_wifi">Active Metrics (WiFi)</string>
<string name="active_network_type">Active network type</string>
<string name="active_network_type_title">Active Network Type</string>
<string name="activity_info_name">System Info</string>
<string name="activity_initial_settings_name">Data Cap</string>
<string name="activity_logs_name">SamKnows Logs</string>
<string name="activity_settings_name">Settings</string>
<string name="activity_run_test_name">SamKnows Test Executor</string>
<string name="activity_test_results_name">Test Results</string>
<string name="agree">I Agree</string>
<string name="alert_icon">Alert Icon</string>
<string name="all">All</string>
<string name="archive_result">Archived Result</string>
<string name="archive_result_of"> of </string>
<string name="area_code">Area Code</string>
<string name="auto_testing">Auto Testing</string>
<string name="available_tests">Available Tests</string>
<string name="average_results">Average Results</string>
<string name="best_time">Best time</string>
<string name="bluetooth">bluetooth</string>
<string name="browsing">Browsing</string>
<string name="cancel">Cancel</string>
<string name="cancel_test_question">Do you want to cancel running test?</string>
<string name="cant_run_test">Please wait for the Best Target test to finish.</string>
<string name="cdma">CDMA</string>
<string name="cdmaecio">CDMA ECIO</string>
<string name="cdma_base_station_id">CDMA base station ID</string>
<string name="cdma_base_station_latitude">cmda base station latitude</string>
<string name="cdma_base_station_longitude">CDMA base station longitude</string>
<string name="cdma_base_station_strength">CDMA base station strength</string>
<string name="cdma_network_id">CDMA network ID</string>
<string name="cdma_system_id">CDMA system ID</string>
<string name="cell_id">Cell ID</string>
<string name="cell_tower_info">Current Cell Tower</string>
<string name="choose_test">Choose Test</string>
<string name="choose_time">Choose Time Period</string>
<string name="close">Close</string>
<string name="close_panel">Close Panel</string>
<string name="cmda_base_station_latitude">CDMA base station latitude</string>
<string name="completed">Completed</string>
<string name="confirm_password">Confirm Password</string>
<string name="connected">Connected</string>
<string name="connection_status">Connection status</string>
<string name="connectivity_type">Connectivity Type</string>
<string name="continue_text">Next</string>
<string name="cpu_usage">CPU usage: </string>
<string name="create_account">Create account</string>
<string name="create_user">Create user</string>
<string name="current_time">Current time</string>
<string name="data_cap_day_summary">Select the day of the month that the mobile data usage counter should be reset. </string>
<string name="data_cap_day_title">Mobile data usage reset day: </string>
<string name="data_cap_exceeded">Data Cap Exceeded. Do you wish to continue anyway?  </string>
<string name="data_cap_might_be_exceeded">Data Cap Might Be Exceeded. Do you wish to continue anyway?  </string>
<string name="data_cap_summary">The maximum amount of mobile data in Mega Bytes (excluding WiFi) that this application can use in a billing month.</string>
<string name="data_cap_title">Mobile data cap: </string>
<string name="data_usage_title">Mobile data usage: </string>
<string name="data_used_preference_summary">The amount of mobile data (excluding WiFi) used by this application since the start of this billing month.</string>
<string name="data_used_preference_title">Data Used</string>
<string name="date">Date</string>
<string name="results_table_header_datetime">Date / Time</string>
<string name="day_of_month">Day of Month: </string>
<string name="disabled">Disabled</string>
<string name="dont_have_account">Need an account?</string>
<string name="downloaded">Downloaded: </string>
<string name="download_complete">Download complete</string>
<string name="download_configuration">Download configuration</string>
<string name="installing_configuration">Installing configuration</string>
<string name="download_failed">The download test has failed</string>
<string name="download_mbps">Download</string>
<string name="download_success">The download test achieved %1$s Mbps</string>
<string name="download_upload_run_confirmation">This test will use some your data plan. Do you wish to continue?</string>
<string name="edge">EDGE</string>
<string name="ehrpd">eHRPD</string>
<string name="empty_code_error">Code can\'t be empty!</string>
<string name="empty_password_error">Password can\'t be empty!</string>
<string name="empty_username_error">Username can\'t be empty!</string>
<string name="enabled">Enabled</string>
<string name="enable_now">Enable Now</string>
<string name="enable_service_question">Do you want to enable mobile testing?</string>
<string name="enable_testing_summary">Enable or disable background tests.</string>
<string name="enable_testing_title">Enable Background Tests</string>
<string name="line_break">Line Break</string>
<string name="menu_terms_and_condition">Terms of Use</string>
<string name="results_table_header_result">Result</string>
<string name="settings">Settings</string>
<string name="setting_up">Setting up</string>
    <string name="about_title">About</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="latency">Latency</string>
    <string name="packet_loss">Packet loss</string>
    <string name="jitter">Jitter</string>
    <string name="time_period">Period</string>
    <string name="location_provider">Location Provider</string>
    <string name="menu_item_select_network">Select Network</string>
    <string name="menu_item_select_tests">Select Tests</string>
</resources>