<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/fragment_main_select_tests"
        android:icon="@drawable/ic_action_list_2"
        android:title="@string/menu_item_select_tests"
        android:showAsAction="always"
        android:orderInCategory="0"/>
    
    <item
        android:id="@+id/fragment_main_select_network"
        android:icon="@drawable/ic_action_filter"
        android:title="@string/menu_item_select_network"
        android:showAsAction="always"
        android:orderInCategory="1"/>
    
    <item
        android:id="@+id/fragment_main_select_time_period"
        android:icon="@drawable/ic_action_clock"
        android:title="@string/time_period"
        android:showAsAction="always"
        android:orderInCategory="2"/>    
</menu>