<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
        
    <item
        android:id="@+id/menu_item_fragment_activity_main_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"
        android:showAsAction="never"
        android:orderInCategory="0"/>
    
    <item
        android:id="@+id/menu_item_fragment_activity_main_terms_and_conditions"
        android:title="@string/menu_terms_and_condition"
        android:showAsAction="never"
        android:orderInCategory="1"/>
    
    <item
        android:id="@+id/menu_item_fragment_activity_main_about"
        android:icon="@drawable/ic_action_info"
        android:title="@string/about_title"
        android:showAsAction="never"
        android:orderInCategory="2"/>          
</menu>
