<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/screenBackground"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/passive_metrics"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#ffffff"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="20dp" >

        <TextView
            android:id="@+id/TextView09"
            style="@style/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="left"
            android:text="@string/activating"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:width="180dp" />

        <TextView
            android:id="@+id/TextView01"
            style="@style/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="left"
            android:text="@string/setting_up"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="18sp"
            android:width="180dp" />

        <ProgressBar
            android:id="@+id/activation_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxHeight="16dp"
            android:minHeight="36dp"
            android:progressDrawable="@drawable/blueprogress" />

        <ImageView
            android:id="@+id/ImageView03"
            android:contentDescription="@string/line_break"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAlignBottom="false"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            android:src="@drawable/pagedrop" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/black_alpha" >

            <TableRow
                android:id="@+id/TableRow05"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView02"
                    style="@style/h1"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/download_configuration"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="18sp"
                    android:width="160dp" />

                <ProgressBar
                    android:id="@+id/download_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/download_complete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/download_complete"
                    android:padding="5dp"
                    android:src="@drawable/check"
                    android:visibility="gone" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/black_alpha" >

            <TableRow
                android:id="@+id/TableRow02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView03"
                    style="@style/h1"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/activating"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="18sp"
                    android:width="160dp" />

                <ProgressBar
                    android:id="@+id/activating_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/activating_complete"
                    android:contentDescription="@string/activating_complete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:src="@drawable/check"
                    android:visibility="gone" />

            </TableRow>
        </TableLayout>

    </LinearLayout>

</RelativeLayout>